--- a/src/styles/navbar-styles.css
+++ b/src/styles/navbar-styles.css
@@ -1,3 +1,15 @@
+.status-bar {
+    position: fixed;
+    width: 100%;
+    height: 50px;
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    z-index: 100;
+    top: 0;
+    left: 0;
+    transform: translateY(-50px);
+}
+
 nav {
     width: 100%;
     display: flex;
